--- a/dropdown-menu-site/css/style.css
+++ b/dropdown-menu-site/css/style.css
@@ -189,8 +189,37 @@ body {
 /* Queries */
 @media screen and (min-width: 325px) and (max-width: 768px) {
     #navbar {
-        flex-direction: column;
+        flex-direction: row;
+        display: flex;
+        justify-content: space-between;
+    }
+    #navbar #logo {
+        padding: 40px;
+        font-size: 20px;
+        display: flex;
+        text-align: center;
+    }
+    #navbar a {
         display: flex;
         align-items: flex-end;
+        padding: 30px;
+    }
+    #navbar .donate {
+        border-bottom-right-radius: 60px;
+    }
+    .bio p {
+        padding: 10px;
+    }
+    a {
+        font-size: 14px;
+    }
+    #hero h1 {
+        left: 14px;
+    }
+    .tag .fa-mars {
+        color: #14a09e;
+    }
+    .tag .fa-venus {
+        color: #e42688;
     }
 }
