--- a/dropdown-menu-site/css/style.css
+++ b/dropdown-menu-site/css/style.css
@@ -76,7 +76,7 @@ body {
 /* Hero */
 #hero {
     height: 80vh;
-    background-image: url("../images/hero.jpg");
+    background-image: url("../images/Hero.jpg");
     background-size: cover;
     background-position: center center;
     display: flex;
