--- a/dropdown-menu-site/css/style.css
+++ b/dropdown-menu-site/css/style.css
@@ -58,7 +58,7 @@ body {
         opacity 0.5s,
         visibility 0.5s,
         transform 1s
-    ;
+        ;
     z-index: 1;
 }
 .link-container:hover .dropdown {
@@ -169,7 +169,7 @@ body {
     margin: 10px;
     color: #020224;
     padding: 20px;
-    font-size: 20px;;
+    font-size: 20px;
 }
 .single #button a {
     background-color: #f2c34c;
