--- a/restaurant/css/style.css
+++ b/restaurant/css/style.css
@@ -1,3 +1,4 @@
+
 /* Resets */
 * {
     box-sizing: border-box;
@@ -8,10 +9,10 @@ body {
     background-color: #212B5E;
 }
 
-/* Content */
+/*Navbar*/
 #navbar {
     background-color: #ffffffea;
-    /* background: linear-gradient(to bottom, #000000, white); */
+    background-image: url();
     display: flex;
     align-items: baseline;
     padding: 5px 20px;
@@ -24,6 +25,8 @@ body {
     color: black;
     padding: 20px;
     margin-right: 15px;
+    font-family: "Minion variable concept", serif;
+    font-size: 20px;
 }
 .drop-contain i {
     font-size: 30px;
@@ -44,6 +47,7 @@ body {
         visibility 0.5s,
         transform 1s
         ;
+    z-index: 1;
 }
 .drop-contain:hover .drop-menu {
     opacity: 1;
@@ -61,6 +65,46 @@ body {
 }
 #navbar p {
     font-style: italic;
+    font-family: "Minion variable concept", serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/*Hero*/
+#hero {
+    height: 80vh;
+    background-image: url(../images/hero.webp);
+    background-position: center center;
+    background-size: cover;
+    margin: 20px 20px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
+}
+#hero h1 {
+    position: absolute;
+    font-size: 60px;
+    bottom: 40%;
+    right: 35%;
+    color: white;
+    font-family: "Imprint MT Shadow", serif;
+    background-color: #212b5eb3;
+    padding: 10px;
+    border-radius: 20px;
+}
+#hero a {
+    position: absolute;
+    right: 15%;
+    bottom: 30%;
+    font-size: 30px;
+    font-family: "Minion variable concept", serif;
+    text-decoration: none;
+    background-color: #ffffff;
+    padding: 10px;
+    border-radius: 20px;
+    color: #D71F26;
 }
 
 /* Queries */
