--- a/restaurant/css/style.css
+++ b/restaurant/css/style.css
@@ -155,6 +155,7 @@ body {
     border: 3px solid #D71F26;
     box-shadow: 5px 5px 8px #0000007c;
     position: relative;
+    padding: 40px;
 }
 .themes a {
     display: flex;
@@ -192,6 +193,7 @@ body {
     background-color: white;
     border: 3px solid #D71F26;
     box-shadow: 5px 5px 8px #0000007c;
+    padding: 40px;
 }
 .dishes a {
     display: flex;
@@ -203,13 +205,9 @@ body {
 }
 .sub-items3 {
     position: absolute;
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0.5s, opacity 0.5s;
 }
 .sub-items3:hover {
-    visibility: visible;
-    opacity: 1;
+    
 }
 .sub-items3 a {
     color: #212B5E;
