--- a/restaurant/css/style.css
+++ b/restaurant/css/style.css
@@ -83,7 +83,7 @@ body {
     align-items: center;
     justify-content: flex-end;
     position: relative;
-    margin-bottom: 500px;
+    margin-bottom: 100px;
 }
 #hero h1 {
     position: absolute;
@@ -108,9 +108,66 @@ body {
     border-radius: 20px;
     color: #D71F26;
     transition: 
-        box-shadow 0.5s;
+        box-shadow 0.25s;
 }
 #hero a:hover {
+    box-shadow: 4px 4px 8px black;
+}
+
+/* cards */
+#cards {
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    text-align: center;
+}
+.art {
+    background-color: #ffffffea;
+    margin: 20px;
+    padding: 20px;
+    flex: 1;
+    border-radius: 20px;
+    box-shadow: 4px 4px 10px black;
+}
+.food {
+    background-color: #ffffffea;
+    margin: 20px;
+    padding: 20px;
+    flex: 1;
+    border-radius: 20px;
+    box-shadow: 4px 4px 10px black;
+}
+#cards img {
+    width: 100%;
+    border-radius: 20px;
+    border: 4px solid #212b5e;
+}
+.art h3,
+.food h3 {
+    background-color: #D71F26;
+    color: white;
+    box-shadow: 4px 4px 8px #0000006b;
+    font-family: "Imprint MT Shadow", serif;
+}
+.art p,
+.food p {
+    font-size: 20px;
+    padding: 10px 25px;
+    font-family: "Minion variable concept", sans-serif;
+}
+.art a,
+.food a {
+    text-decoration: none;
+    font-family: "Minion variable concept", sans-serif;
+    font-size: 18px;
+    background-color: #212B5E;
+    color: white;
+    padding: 10px;
+    border-radius: 20px;
+    transition: box-shadow 0.25s;
+}
+.art a:hover,
+.food a:hover {
     box-shadow: 4px 4px 8px black;
 }
 
@@ -121,6 +178,7 @@ body {
     justify-content: center;
     justify-content: space-between;
     background-color: #ffffffea;
+    margin-top: 100px;
 }
 #footer a {
     background-color: #212B5E;
@@ -128,7 +186,7 @@ body {
     border-radius: 20px;
     text-decoration: none;
     color: white;
-    transition: box-shadow 0.5s;
+    transition: box-shadow 0.25s;
 }
 #footer a:hover {
     box-shadow: 4px 4px 8px black;
@@ -224,7 +282,8 @@ body {
 .col-2 {
     background-color: white;
     padding: 40px;
-    margin: 20px;
+    margin: 10px;
+    margin-bottom: 150px;
 }
 .col-2 h3 {
     text-align: center;
@@ -234,11 +293,16 @@ body {
 }
 .col-2 ul {
     display: flex;
+    justify-content: space-between;
 }
 .col-2 li {
-    margin: 35px;
     width: 200px;
+    padding: 10px;
+    flex-wrap: wrap;
     list-style: none;
+    border: 1px solid;
+    text-align: center;
+    background-color: #212b5e30;
 }
 .col-2 img {
     width: 100%;
@@ -262,6 +326,12 @@ body {
     font-size: 25px;
     width: 200px;
 }
+.col-2 a, p {
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+    font-family: "Minion variable concept", serif;
+}
 
 /* Queries */
 @media screen and (min-width: 480px) and (max-width: 1440px) {
@@ -269,8 +339,8 @@ body {
         flex-wrap: wrap;
     }
     .col-2 li {
-        margin: 30px;
-        width: 100px;
+        margin: 10px;
+        width: 200px;
     }
     .col-2 img {
         width: 100px;
