--- a/restaurant/css/style.css
+++ b/restaurant/css/style.css
@@ -361,4 +361,18 @@ body {
         font-size: 20px;
         width: 150px;
     }
+    #banner {
+        width: 80%;
+        left: 50px;
+    }
+    #navbar p {
+        font-size: 14px;
+    }
+    #navbar {
+        padding: 0px;
+    }
+    #hero {
+        width: 90%;
+        left: 20px;
+    }
 }
