--- a/license/css/style.css
+++ b/license/css/style.css
@@ -6,12 +6,13 @@
 
     Good luck, and have fun!
 */
-
+@import url('https://fonts.googleapis.com/css2?family=Atomic+Age&family=Cedarville+Cursive&display=swap');
 #license {
     width: 700px;
     border: 1px solid black;
     border-radius: 5%;
     padding: 24px;
+    background: linear-gradient(-50deg,#d68b00, #ffdf60);
 }
 #left-side {
     display: inline-block; 
@@ -43,3 +44,67 @@
     display: inline-block;
 }
 
+#content h1 {
+    font-size: 50px;
+    margin: 0px;
+    color: blue;
+}
+#left-side h4 {
+    background-color: blue;
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    margin: 10px 0px;
+}
+#id-and-expiration {
+    font-size: 20px;
+}
+#id-and-expiration span {
+    color: red;
+    margin-right: 10px;    
+}
+#address {
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 10px;
+}
+#personal-info {
+    display: flex;
+    gap: 10px;
+    font-size: 18px;
+
+}
+#data-right {
+    margin: 10px;
+    display: inline-block
+}
+#data-left {
+    margin: 10px;
+    display: inline-block
+}
+#data-fields span {
+    color: red;
+}
+#signature {
+    font-family: "Cedarville Cursive", cursive;
+    font-size: 30px;
+}
+#small-pic-container img {
+    opacity: 50%;
+}
+#donor-and-real-id {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+#donor {
+    color: red;
+    margin-right: 15px;
+}
+#real-id {
+    background-color: #ffea00;
+    border-radius: 50px;
+    color: white;
+    font-size: 20px;
+}
